fixing whitespace
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@37096 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/Chat/css/Chat.scss
+++ b/extensions/wikia/Chat/css/Chat.scss
@@ -250,7 +250,7 @@ a {
 		}
 	}
 	.message {
-		white-space: pre;
+		white-space: pre-line;
 	}
 	.inline-alert {
 		color: $color-chat-gray;
